# learning-and-experiments

./: .gitignore  README.md
celery-example/: .gitignore  README.md  run_celery.sh  run_tasks.py
celery-example/celery_demo/: celery.py  tasks.py
django-celery-api/: .dockerignore  .gitignore  Dockerfile  requirements.txt
django-celery-api/models/: .gitignore
django-celery-api/ocr/: apps.py  inference.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
django-celery-api/ocr_api/: __init__.py  celery.py  db.sqlite3  db.sqlite3-shm  settings.py  urls.py
django-celery-api/scripts/: path_tests.sh  run.sh  run_asgi.sh  run_celery.sh  run_redis.sh
django-ocr-api/: Dockerfile  pyproject.toml  requirements.txt
django-ocr-api/examples/tiff/: 2_3.tiff
django-ocr-api/ocr/: apps.py  inference.py  models.py  serializers.py  urls.py  utils.py  views.py
django-ocr-api/ocr_api/: asgi.py  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  settings.py  urls.py  wsgi.py
django-ocr-api/scripts/: download_models.sh  run.sh  run_asgi.sh
django-tutorial/: db.sqlite3
django-tutorial/api/: settings.py  wsgi.py
django-tutorial/demo_api/: settings.py
django-tutorial/quickstart/: views.py
ml/: .gitignore  README.md  modal_get_started.py  requirements.txt
ml/basics/: pytorch.ipynb
ml/notebooks/: transformers-laid-out.ipynb
nginx-playground/: Dockerfile  Dockerfile.app  Dockerfile.proxy  README.md  docker-compose.yaml  gunicorn.sh  manage.py  requirements.txt
notebooks/: asyncio.ipynb
tips/: custom_parser_django.md
transformers/: README.md
(+30 files in other folders)
